# sqlite-vss

./: .env  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  NOTES  README.md  VERSION  docs.md  ext-embeddings.py  test-full.sql  test.sql  test.yaml
.github/: FUNDING.yml
.github/workflows/: macos-arm-deps.sh  release.yaml  rename-wheels.py  site.yaml  test.yaml  upload-deno-assets.js  upload-unstable.js  upload.js
benchmarks/gist1m/: build.sql
benchmarks/sift1m/: README.md  bench.sh  build.sql  cleanup.sh  load-flat.sql  load-ivfflat.sql  query-flat.sql  query-ivfflat.sql
bindings/datasette/: README.md  version.py.tmpl
bindings/datasette/datasette_sqlite_vss/: version.py
bindings/deno/: README.md  deno.json  mod.ts  test.ts
bindings/elixir/: README.md  VERSION  mix.exs  sqlite-vss-checksum.exs.tmpl
bindings/elixir/demo/: demo.exs
bindings/elixir/lib/: sqlite_vss.ex
bindings/elixir/test/: sqlite_vss_test.exs
bindings/elixir/test/fixtures/: checksum-sqlite-vss.exs
bindings/go/: README.md  go.mod  go.sum  lib.go
bindings/go/vector/: sqlite-vector.h  vector.go
bindings/go/vss/: sqlite-vss.h  vss.go
bindings/node/: .gitignore  README.md  platform-package.README.md.tmpl
bindings/node/sqlite-vss/: README.md  package.json  package.json.tmpl  test.js
bindings/node/sqlite-vss-darwin-arm64/: README.md  package.json
bindings/node/sqlite-vss-darwin-x64/: package.json
bindings/node/sqlite-vss-linux-x64/: README.md  package.json
bindings/node/sqlite-vss/src/: index.d.ts
bindings/python/: README.md
bindings/python/datasette_sqlite_vss/: setup.py
bindings/python/datasette_sqlite_vss/datasette_sqlite_vss/: version.py
bindings/python/sqlite_vss/: version.py
bindings/python/sqlite_vss/sqlite_vss/: __init__.py  version.py
bindings/ruby/: sqlite_vss.gemspec
bindings/ruby/lib/: sqlite_vss.rb  version.rb  version.rb.tmpl
bindings/rust/: Cargo.toml  Cargo.toml.tmpl  build.rs
bindings/rust/src/: lib.rs
bindings/sqlite-utils/: README.md  pyproject.toml  pyproject.toml.tmpl
bindings/sqlite-utils/sqlite_utils_sqlite_vss/: __init__.py  version.py
deno/: README.md  README.md.tmpl  deno.json  deno.json.tmpl  mod.ts
elixir/: README.md  mix.exs
elixir/lib/: extension.ex  sqlite_vss.ex
elixir/lib/mix/tasks/: sqlite_vss.install.ex
elixir/test/: sqlite_vss_test.exs
examples/: bench.sql
examples/c/: Makefile  README.md  demo.c
examples/go/: Makefile  README.md  demo.go  go.mod  go.sum
examples/go-cybertron/: .gitignore  demo-cybertron.go  go.mod  go.sum
examples/headlines/: .dockerignore  Dockerfile  README.md  build.sh  build.sql  fly.toml  query.sql  tmp.sql  tmp_coldquery.sql  xxx.sql
examples/headlines/bench/: query-flat.sql  query-ivfflat.sql
examples/headlines/plugins/: plugin.py
examples/mcu-wiki/: README.md
examples/rust/: Cargo.toml  build.rs  demo.rs
examples/sift/: README.md  build.sql
examples/simonw_blog/: README.md  build.sql  up.sh
examples/wiki/: .gitignore  README.md  build.sql  query.sql
go/: README.md  go.mod  go.sum  vss.go
go/example/: main.go
include/: vectors.h
npm/: platform-package.package.json.tmpl
npm/sqlite-vss/: README.md  package.json  package.json.tmpl  test.js
npm/sqlite-vss-darwin-arm64/: package.json
npm/sqlite-vss-darwin-x64/: README.md  package.json
npm/sqlite-vss-linux-x64/: package.json
npm/sqlite-vss/src/: index.js
python/datasette_sqlite_vss/: setup.py
python/datasette_sqlite_vss/datasette_sqlite_vss/: __init__.py  version.py
python/datasette_sqlite_vss/tests/: test_sqlite_vector.py
python/sqlite_vss/: README.md  setup.py
python/sqlite_vss/sqlite_vss/: __init__.py  version.py
scripts/: deno_generate_package.sh  elixir_generate_checksum.sh  npm_generate_platform_packages.sh  openmp_static.patch  publish_release.sh  rename-wheels.py
site/: .gitignore  api-reference.md  building-source.md  compare.md  getting-started.md  index.md  package-lock.json  package.json  project.data.ts  see-also.md
site/.vitepress/: config.ts
site/.vitepress/theme/: index.ts  style.css
site/guides/: cohere.md  huggingface.md  openai-python.md  openai-to-sqlite.md  sentence-transformers-python.md
site/using/: datasette.md  deno.md  elixir.md  go.md  loadable.md  nodejs.md  python.md  ruby.md  rust.md  turso.md
src/: debug.cpp  extension.cpp  main.cpp  sql-statement.h  sqlite-vector.cpp  sqlite-vector.h.in  sqlite-vss.cpp  sqlite-vss.h.in  vector-extension.cpp  vss-extension.cpp
src/vec/: functions.h  fvecsEach_cursor.h  fvecsEach_vtab.h
src/vss/: calculations.h  inclusions.h  meta-methods.h  sql-statement.h  vss-index-cursor.h  vss-index-vtab.h  vss-index.h
tests/: np.py  test-loadable.py  test-python.py  test-sqlite-vector.sql
